media/miniflux/deployment.yml
kind:       Deployment
apiVersion: apps/v1

metadata:
  name:      miniflux
  namespace: rss-miniflux
  labels:
    app: miniflux

spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - image: quay.io/miniflux/miniflux    # docker.io/miniflux/miniflux
          name:  miniflux
          ports:
            - name:          http
              containerPort: 8080
          resources:
            limits:
              cpu:    500m
              memory: 1000Mi
      # imagePullSecrets:
      #   - name: secret-token
