media/miniflux/service.yml
kind:       Service
apiVersion: v1

metadata:
  name:      miniflux
  namespace: rss-miniflux

spec:
  selector:
    app: miniflux
  ports:
    - protocol: TCP
      port:     8080
      name:     http
