media/miniflux/http-route.yml
kind:       HTTPRoute
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      miniflux
  namespace: rss-miniflux

spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: web

  hostnames:
    - miniflux.localhost

  rules:
    - backendRefs:
        - name: miniflux
          port: 8080
